yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-and-morty-api
  labels:
    app: rick-and-morty-api
spec:
  selector:
    app: rick-and-morty-api
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  type: ClusterIP
