yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rick-and-morty-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: rickandmorty.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rick-and-morty-api
            port:
              number: 80
